--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 nom = "6.0.1"
+sha-1 = "0.9.2"
+crc32fast = "1.2.1"
 
 [dev-dependencies]
 dotenv = "0.15.0"
-dotenv_codegen = "0.15.0"
