--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 nom = "6.0.1"
 sha-1 = "0.9.2"
 crc32fast = "1.2.1"
+once_cell = "1.5.2"
 
 [dev-dependencies]
 dotenv = "0.15.0"
