--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -11,6 +11,7 @@ nom = "6.0.1"
 sha-1 = "0.9.2"
 crc32fast = "1.2.1"
 once_cell = "1.5.2"
+miniz_oxide = "0.4.3"
 
 [dev-dependencies]
 dotenv = "0.15.0"
