--- a/crates/tomestone-sqpack-dump/Cargo.toml
+++ b/crates/tomestone-sqpack-dump/Cargo.toml
@@ -5,5 +5,9 @@ authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = "2.33.3"
 dotenv = "0.15.0"
+hex = "0.4.2"
+once_cell = "1.5.2"
+regex = "1.4.3"
 tomestone-sqpack = { path = "../tomestone-sqpack" }
