--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nom = "6.0.1"
-sha-1 = "0.9.2"
 crc32fast = "1.2.1"
-once_cell = "1.5.2"
 miniz_oxide = "0.4.3"
+nom = "6.0.1"
+once_cell = "1.5.2"
+regex = "1.4.3"
+sha-1 = "0.9.2"
 
 [dev-dependencies]
 dotenv = "0.15.0"
