--- a/crates/tomestone-exdf/Cargo.toml
+++ b/crates/tomestone-exdf/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 nom = "6.0.1"
+
+[dev-dependencies]
+dotenv = "0.15.0"
+tomestone-sqpack = { path = "../tomestone-sqpack" }
