--- a/crates/tomestone-sqpack-dump/Cargo.toml
+++ b/crates/tomestone-sqpack-dump/Cargo.toml
@@ -10,4 +10,5 @@ dotenv = "0.15.0"
 hex = "0.4.2"
 once_cell = "1.5.2"
 regex = "1.4.3"
+tomestone-exdf = { path = "../tomestone-exdf" }
 tomestone-sqpack = { path = "../tomestone-sqpack" }
