--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -138,15 +138,15 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'tomestone-sqpack-dump'",
+            "name": "Debug executable 'tomestone-dump'",
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=tomestone-sqpack-dump",
-                    "--package=tomestone-sqpack-dump"
+                    "--bin=tomestone-dump",
+                    "--package=tomestone-dump"
                 ],
                 "filter": {
-                    "name": "tomestone-sqpack-dump",
+                    "name": "tomestone-dump",
                     "kind": "bin"
                 }
             },
@@ -156,16 +156,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'tomestone-sqpack-dump'",
+            "name": "Debug unit tests in executable 'tomestone-dump'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=tomestone-sqpack-dump",
-                    "--package=tomestone-sqpack-dump"
+                    "--bin=tomestone-dump",
+                    "--package=tomestone-dump"
                 ],
                 "filter": {
-                    "name": "tomestone-sqpack-dump",
+                    "name": "tomestone-dump",
                     "kind": "bin"
                 }
             },
