--- a/crates/tomestone-dump/Cargo.toml
+++ b/crates/tomestone-dump/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tomestone-sqpack-dump"
+name = "tomestone-dump"
 version = "0.1.0"
 authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2018"
