Create tomestone-common library crate

--- a/crates/tomestone-exdf/Cargo.toml
+++ b/crates/tomestone-exdf/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 nom = "6.0.1"
+tomestone-common = { path = "../tomestone-common" }
 
 [dev-dependencies]
 dotenv = "0.15.0"
