--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -13,6 +13,7 @@ nom = "6.0.1"
 once_cell = "1.5.2"
 regex = "1.4.3"
 sha-1 = "0.9.2"
+tomestone-common = { path = "../tomestone-common" }
 
 [dev-dependencies]
 dotenv = "0.15.0"
