--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2018"
 
 [dependencies]
 crc32fast = "1.2.1"
+directories = "3.0"
 miniz_oxide = "0.4.3"
 nom = "6.0.1"
 once_cell = "1.5.2"
 regex = "1.4.3"
+rusqlite = "0.24.2"
 sha-1 = "0.9.2"
 tomestone-common = { path = "../tomestone-common" }
 
