--- a/crates/fanttheysia/Cargo.toml
+++ b/crates/fanttheysia/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+dotenv = "0.15.0"
+tomestone-exdf = { path = "../tomestone-exdf" }
+tomestone-sqpack = { path = "../tomestone-sqpack" }
+tomestone-string-interp = { path = "../tomestone-string-interp" }
