--- a/crates/tomestone-string-interp/Cargo.toml
+++ b/crates/tomestone-string-interp/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 nom = "6.0.1"
 
 [dev-dependencies]
+chrono = "0.4"
 dotenv = "0.15.0"
 tomestone-exdf = { path = "../tomestone-exdf" }
 tomestone-sqpack = { path = "../tomestone-sqpack" }
