--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug example 'expression_usage'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--example=expression_usage",
+                    "--package=tomestone-string-interp"
+                ],
+                "filter": {
+                    "name": "expression_usage",
+                    "kind": "example"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
             "name": "Python: reverse_crc32.py",
             "type": "python",
             "request": "launch",
@@ -181,7 +199,7 @@
             },
             "args": [],
             "cwd": "${workspaceFolder}"
-        }
+        },
         {
             "type": "lldb",
             "request": "launch",
@@ -202,6 +220,6 @@
                 "--ignored"
             ],
             "cwd": "${workspaceFolder}"
-        }
+        },
     ]
 }
