--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 crc32fast = "1.2.1"
 directories = "3.0"
+flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
 miniz_oxide = "0.4.3"
 nom = "6.0.1"
 once_cell = "1.5.2"
