--- a/crates/fanttheysia-cli/Cargo.toml
+++ b/crates/fanttheysia-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fanttheysia"
+name = "fanttheysia-cli"
 version = "0.1.0"
 authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2018"
