--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
 
 [dependencies]
 crc32fast = "1.2.1"
 directories = "3.0"
-flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
 miniz_oxide = "0.4.3"
 nom = "6.0.1"
 once_cell = "1.5.2"
