--- a/crates/tomestone-string-interp/fuzz/Cargo.toml
+++ b/crates/tomestone-string-interp/fuzz/Cargo.toml
@@ -4,7 +4,7 @@ name = "tomestone-string-interp-fuzz"
 version = "0.0.0"
 authors = ["Automatically generated"]
 publish = false
-edition = "2018"
+edition = "2021"
 
 [package.metadata]
 cargo-fuzz = true
@@ -20,5 +20,5 @@ path = ".."
 members = ["."]
 
 [[bin]]
-name = "fuzz_target_1"
-path = "fuzz_targets/fuzz_target_1.rs"
+name = "parser"
+path = "fuzz_targets/parser.rs"
