--- a/crates/tomestone-dump/Cargo.toml
+++ b/crates/tomestone-dump/Cargo.toml
@@ -13,3 +13,6 @@ regex = "1.4.3"
 tomestone-exdf = { path = "../tomestone-exdf" }
 tomestone-sqpack = { path = "../tomestone-sqpack" }
 tomestone-string-interp = { path = "../tomestone-string-interp" }
+
+[dev-dependencies]
+trycmd = "0.8.3"
