--- a/crates/tomestone-string-interp/Cargo.toml
+++ b/crates/tomestone-string-interp/Cargo.toml
@@ -12,6 +12,7 @@ nom = "6.0.1"
 [dev-dependencies]
 chrono = "0.4"
 dotenv = "0.15.0"
+tomestone-common = { path = "../tomestone-common" }
 tomestone-exdf = { path = "../tomestone-exdf" }
 tomestone-sqpack = { path = "../tomestone-sqpack" }
 quickcheck = "1.0.3"
