--- a/crates/tomestone-dump/Cargo.toml
+++ b/crates/tomestone-dump/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.0.0", features = ["cargo"] }
+clap = { version = "3.0.0", features = ["cargo", "env"] }
 dotenv = "0.15.0"
 hex = "0.4.2"
 once_cell = "1.5.2"
@@ -15,5 +15,6 @@ tomestone-sqpack = { path = "../tomestone-sqpack" }
 tomestone-string-interp = { path = "../tomestone-string-interp" }
 
 [dev-dependencies]
+tempfile = "3.3.0"
 tomestone-common = { path = "../tomestone-common" }
 trycmd = "0.8.3"
