--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,9 @@
 [workspace]
 members = ["crates/*"]
+
+# Exclude placeholder crates
+exclude = [
+    "crates/fanttheysia-webapp-backend",
+    "crates/fanttheysia-webapp-frontend",
+    "crates/tomestone-explorer",
+]
