--- a/crates/fanttheysia-common/Cargo.toml
+++ b/crates/fanttheysia-common/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["David Cook <divergentdave@gmail.com>"]
 edition = "2021"
 
 [dependencies]
+serde = "1.0.136"
 serde_yaml = "0.8.13"
 tomestone-string-interp = { path = "../tomestone-string-interp" }
