--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -13,8 +13,10 @@ directories = "3.0"
 miniz_oxide = "0.4.3"
 nom = "6.0.1"
 once_cell = "1.5.2"
+r2d2 = "0.8.9"
+r2d2_sqlite = "0.20.0"
 regex = "1.4.3"
-rusqlite = { version = "0.25.3", features = ["bundled"] }
+rusqlite = { version = "0.27.0", features = ["bundled"] }
 sha-1 = "0.9.2"
 tomestone-common = { path = "../tomestone-common" }
 
