--- a/crates/fanttheysia-webapp-frontend/Cargo.toml
+++ b/crates/fanttheysia-webapp-frontend/Cargo.toml
@@ -13,6 +13,7 @@ gloo-file = "0.2.1"
 gloo-storage = "0.2.0"
 gloo-timers = "0.2.3"
 gloo-worker = "0.1.0"
+lazy_static = "1.4.0"
 monaco = { version = "0.3.0", features = ["yew-components"] }
 serde = "1.0.136"
 serde_yaml = "0.8.23"
