--- a/crates/tomestone-dump/Cargo.toml
+++ b/crates/tomestone-dump/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.0.0", features = ["cargo", "env"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.6"
 hex = "0.4.2"
 once_cell = "1.11.0"
 regex = "1.4.3"
