--- a/crates/tomestone-sqpack/Cargo.toml
+++ b/crates/tomestone-sqpack/Cargo.toml
@@ -21,7 +21,7 @@ sha-1 = "0.9.2"
 tomestone-common = { path = "../tomestone-common" }
 
 [dev-dependencies]
-dotenv = "0.15.0"
+dotenvy = "0.15.6"
 hex = "0.4.2"
 tempfile = "3.3.0"
 quickcheck = "1.0.3"
