--- a/crates/fanttheysia-webapp-frontend/Cargo.toml
+++ b/crates/fanttheysia-webapp-frontend/Cargo.toml
@@ -15,8 +15,8 @@ gloo-timers = "0.2.3"
 gloo-worker = "0.1.0"
 lazy_static = "1.4.0"
 monaco = { version = "0.3.0", features = ["yew-components"] }
-serde = "1.0.136"
-serde_yaml = "0.8.23"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_yaml = "0.9.14"
 tomestone-string-interp = { path = "../tomestone-string-interp" }
 wasm-bindgen =  "0.2.80"
 web-sys = { version = "0.3.57", features = ["Document", "Element", "HtmlAnchorElement"] }
