--- a/crates/experimental-patcher/Cargo.toml
+++ b/crates/experimental-patcher/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.19", features = ["cargo"] }
+fanttheysia-common = { path = "../fanttheysia-common" }
 nom = "7.1.0"
 tomestone-exdf = { path = "../tomestone-exdf" }
 tomestone-sqpack = { path = "../tomestone-sqpack" }
